--- a/newnote_1619178680432.md
+++ b/newnote_1619178680432.md
@@ -1,8 +1,8 @@
 ```language
 #include <iostream>
 int main(){
-  printf("hello world");
-  return 0;
-}
+  printf("hello");
+  return 0;- ```language
+
 ```
 
