--- a/C/grammar-notes/newnote_1619254255699.md
+++ b/C/grammar-notes/newnote_1619254255699.md
@@ -6,19 +6,23 @@ We have four different storage classes in a C program :
 3. static
 4. extern
 
-## 二级标题auto
+## auto
 The auto storage class is the default storage class for all local variables.
+```
 {
    int mount;   //default auto
    auto int month;
 }
-
-register
+```
+## register
 The register storage class is used to define local variables that should be stored in a register instead of RAM. 
 it MIGHT be stored in a register depending on hardware and implementation restrictions.
 If the variable is storaged in a register, which has a maximum size equal to the register size (usually one word) .
 The register should only be used for variables that require quick access such as counters.
+```
 {
    register int  counter;
 }
+```
+
 
