--- a/C/grammar-notes/newnote_1619254255699.md
+++ b/C/grammar-notes/newnote_1619254255699.md
@@ -1,4 +1,4 @@
-A storage class defines the scope (visibility) and life-time of variables and/or functions within a C Program. 
+A storage class defines the ==scope== (visibility) and ==life-time== of variables and/or functions within a C Program. 
 
 We have four different storage classes in a C program :
 1. auto
@@ -7,7 +7,7 @@ We have four different storage classes in a C program :
 4. extern
 
 ## auto
-The auto storage class is the default storage class for all local variables.
+The auto storage class is the default storage class for all l==ocal variables.==
 ```
 {
    int mount;   //default auto
@@ -15,10 +15,10 @@ The auto storage class is the default storage class for all local variables.
 }
 ```
 ## register
-The register storage class is used to define local variables that should be stored in a register instead of RAM. 
-it MIGHT be stored in a register depending on hardware and implementation restrictions.
-If the variable is storaged in a register, which has a maximum size equal to the register size (usually one word) .
-The register should only be used for variables that require quick access such as counters.
+- The register storage class is used to define ==local variables== that ==should== be stored in a register instead of RAM. 
+- it MIGHT be stored in a register depending on hardware and implementation restrictions.
+- If the variable is storaged in a register, which has a maximum size equal to the register size (usually one word) .
+- The register should only be used for variables that require quick access such as counters.
 ```
 {
    register int  counter;
