--- a/C/grammar-notes/1.storage-class.md
+++ b/C/grammar-notes/1.storage-class.md
@@ -1,4 +1,4 @@
-A storage class <font color=red size=5>gray</font> defines the ***scope*** (visibility) and ***life-time*** of variables and/or functions within a C Program. 
+A storage class defines the ***scope*** (visibility) and ***life-time*** of variables and/or functions within a C Program. 
 
 We have four different storage classes in a C program :
 1. auto
